--- a/Backend/classifyMicroservice/pom.xml
+++ b/Backend/classifyMicroservice/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.aws</groupId>
-	<artifactId>loadDataMicroservice</artifactId>
+	<artifactId>classifyMicroservice</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>loadDataMicroservice</name>
-	<description>Load datasets</description>
+	<name>classifyMicroservice</name>
+	<description>Classification algorithms</description>
 	<properties>
 		<java.version>18</java.version>
 		<spring-cloud.version>2021.0.3</spring-cloud.version>
